Move Nav behind Modal background blur. Begin fixing rename incoming shared groups issue

--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -8,7 +8,7 @@ nav {
   align-items: center;
   background-color: var(--backgroundColor);
   position: fixed;
-  z-index: 11;
+  z-index: 9;
 }
 .btm-gradient {
   border-image: var(--menuLineGradient);
